k8s/stag/analyze-beacon-states.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyze-beacon-states
  labels:
    app: analyze-beacon-states
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: analyze-beacon-states
  template:
    metadata:
      labels:
        app: analyze-beacon-states
    spec:
      containers:
        - name: analyze-beacon-states
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          command: ["node", "src/analyze_beacon_states.js"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
