k8s/stag/analyze-burn-categories.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyze-burn-categories
  labels:
    app: analyze-burn-categories
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: analyze-burn-categories
  template:
    metadata:
      labels:
        app: analyze-burn-categories
    spec:
      containers:
        - name: analyze-burn-categories
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          command: ["node", "src/burn-categories/analyze_burn_categories.js"]
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
