k8s/stag/contract-metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contract-metadata
  labels:
    app: contract-metadata
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: contract-metadata
  template:
    metadata:
      labels:
        app: contract-metadata
    spec:
      containers:
        - name: contract-metadata
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          command: ["node", "src/add_contract_metadata.js"]
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
