k8s/stag/store-market-cap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-market-cap
  labels:
    app: store-market-cap
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: store-market-cap
  template:
    metadata:
      labels:
        app: store-market-cap
    spec:
      containers:
        - name: store-market-cap
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          command: ["node", "src/store_market_cap.js"]
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
