k8s/stag/watch-base-fees.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-base-fees
  labels:
    app: watch-base-fees
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch-base-fees
  template:
    metadata:
      labels:
        app: watch-base-fees
    spec:
      containers:
        - name: watch-base-fees
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          command: ["node", "src/watch_base_fees.js"]
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
