k8s/stag/watch-blocks-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-blocks-dev
  labels:
    app: watch-blocks-dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: watch-blocks-dev
  template:
    metadata:
      labels:
        app: watch-blocks-dev
    spec:
      containers:
        - name: watch-blocks-dev
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          command: ["node", "src/watch_blocks.js"]
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
