k8s/stag/watch-blocks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-blocks
  labels:
    app: watch-blocks
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: watch-blocks
  template:
    metadata:
      labels:
        app: watch-blocks
    spec:
      containers:
        - name: watch-blocks
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          command: ["node", "src/watch_blocks.js"]
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
