k8s/stag/serve-fees.yaml
apiVersion: v1
kind: Service
metadata:
  name: serve-fees
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: serve-fees
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serve-fees
  labels:
    app: serve-fees
spec:
  replicas: 2
  selector:
    matchLabels:
      app: serve-fees
  template:
    metadata:
      labels:
        app: serve-fees
    spec:
      restartPolicy: Always
      containers:
        - name: serve-fees
          image: registry.digitalocean.com/ultrasoundmoney/gas-analysis
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3
