k8s/stag/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-stag.ultrasound.money
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 3000
